--- a/public/main.css
+++ b/public/main.css
@@ -37,10 +37,6 @@ textarea {
   padding-top: 30px;
 }
 
-.page-content {
-  padding: 32px 0;
-}
-
 .menu {
   list-style-type: none !important;
   margin: 0;
@@ -69,20 +65,25 @@ textarea {
 .cont {
   padding: 0;
 }
+
 .page-main {
   margin-left: 266px;
   position: relative;
 }
+
 .page-content {
   padding: 48px;
+  padding-top: 16px;
 }
 
 .nav-sidebar {
-  background: #F9FAFA;
+  background: #f0f0f0;
   position: fixed;
   padding: 0 16px;
   height: 100%;
   left: 0px;
+  border-right: 0.5px solid rgba(0, 0, 0, .03);
+  z-index: 100;
 }
 
 .nav {
@@ -128,6 +129,12 @@ textarea {
   text-align: right;
 }
 
+.page-header {
+  background: #F9FAFA;
+  padding: 48px;
+  padding-bottom: 16px;
+}
+
 .list-title {
   margin-bottom: 2rem;
   margin-left: 1rem;
@@ -147,7 +154,7 @@ textarea {
   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 1px 6px rgba(0, 0, 0, .08);
   padding: 1rem;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .todo-form input {
